<resources>
    <string name="app_name">Cinema Club</string>

    <string name="title_favorites">Favorites</string>
    <string name="title_discover">Discover</string>
    <string name="title_profile">Profile</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <string name="search_hint">Search movies</string>
    <string name="search_result">Showing search results for <i>%1$s</i></string>

    <string name="empty_info">No available information to show</string>

    <string name="movie_saved">Movie added to favorites list</string>
    <string name="movie_unsaved">Movie removed from favorites list</string>

    <!-- Fake data -->
    <string name="vote_info" translatable="false">8.5/10 * 2019</string>
    <string name="sample_title" translatable="false">Madagascar 2</string>
    <string name="sample_genres" translatable="false">Cartoon / Adventure</string>
    <string name="sample_locale_and_year" translatable="false">[!<![CDATA[US | 2019]]></string>


    <string name="large_text" translatable="false">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

    </string>

</resources>
