<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="3dp"
        app:cardBackgroundColor="@color/colorPrimary">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingVertical="16dp"
            android:paddingEnd="8dp">

        <ImageView
                android:id="@+id/poster"
                android:layout_width="112dp"
                android:layout_height="170dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                tools:src="@drawable/interstellar_movie_cover" />

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingVertical="6dp"
                android:paddingEnd="4dp">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:paddingBottom="14dp"
                    android:textSize="24sp"
                    tools:text="@string/sample_title" />

            <TextView
                    android:id="@+id/genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccentLight"
                    android:textSize="16sp"
                    tools:text="@string/sample_genres" />

            <TextView
                    android:id="@+id/localeAndYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccentLight"
                    android:paddingBottom="18dp"
                    android:textSize="16sp"
                    tools:text="@string/sample_locale_and_year" />

            <RatingBar
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme.RatingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:transformPivotX="0dp"
                    android:transformPivotY="0dp"
                    android:max="5"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:isIndicator="true"
                    tools:rating="4.5" />

        </LinearLayout>

        <ImageButton
                android:id="@+id/actionButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:contentDescription="@string/app_name"
                android:minWidth="28dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_chevron_right_black_24dp"
                android:tint="@color/colorAccent"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>

