<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        tools:context=".ui.moviedetails.MovieDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:fitsSystemWindows="false"
            android:layout_height="@dimen/app_bar_height"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:toolbarId="@+id/toolbar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="@color/colorPrimary">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/headerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark"
                    app:layout_collapseMode="parallax"
                    tools:scaleType="centerCrop"
                    tools:src="@drawable/interstellar_movie_cover" />

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:background="@color/windowBackground"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="14dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/movieTitleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="26sp"
                    tools:text="@string/sample_title" />

            <TextView
                    android:id="@+id/voteInfoView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    tools:text="@string/vote_info" />

            <com.google.android.material.chip.ChipGroup
                    android:id="@+id/movieGenresView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="true" />

            <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:stepSize="0.5"
                    android:theme="@style/AppTheme.RatingBar"
                    tools:rating="4.5" />

            <TextView
                    android:id="@+id/movieSynopsesView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="@color/colorAccent"
                    tools:text="@string/large_text" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundTint="@color/colorAccentLight"
            app:tint="@color/colorGold"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/ic_share_black_24dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>